--- a/onlinecss.css
+++ b/onlinecss.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:600,900');
+@import url('https://fonts.googleapis.com/css2?family=Khula:wght@610;800&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Khula:wght@510;600&display=swap');
 
 * {
 	box-sizing: border-box;
@@ -15,15 +18,24 @@ body {
 	height: 100vh;
 	margin: -20px 0 50px;
 }
+u{
+	font-family:Khula;
+	
+	text-decoration-line:underline;
+	
+	
+	
+}
+a.underline{
+     display: inline-block;
+    border-bottom: 2px solid;
+    padding-bottom: 0;
+    line-height: 60%;
+}
 
 h1 {
-	
-	font-family: 'Magra', sans-serif;
-font-family: 'Open Sans', sans-serif;
-/*font-family: 'Cabin', sans-serif;
-font-family: 'Lato', sans-serif;*/
-/*font-family: 'Source Sans Pro', sans-serif;*/
-	font-weight: bolder;
+	font-family:Khula;
+font-weight: bolder;
 font-size: 40px;
 	
 }
@@ -33,12 +45,16 @@ h2 {
 }
 
 p {
-	font-size: 15px;
-	font-weight: 300;
+	font-size: 13px;
+	font-weight: 450;
+	text-decoration-thickness:3em;
+	font-family:Khula;
 	/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+	/*font-family:Lato;
+	font-family:'Montserrat', sans-serif;
 	font-family: 'Cabin', sans-serif;
 font-family: 'Lato', sans-serif;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Source Sans Pro', sans-serif;*/
 
 	/*font-family: 'Roboto', sans-serif;*/
 	/*line-height: 20px;
@@ -56,11 +72,14 @@ text-transform: none;
 }
 
 .underline{
-	text-decoration-line: underline;
+	text-decoration: underline;
 	text-decoration-color: black;
-	text-decoration-thickness:0.15em;  
+	text-decoration-thickness:30px;  
 	font-size: 15px;
-
+	font-weight:600;
+text-decoration-style: solid;
+font-family:Khula;
+text-decoration-style: solid;
 }
 a {
 	color: #333;
@@ -217,7 +236,7 @@ input {
 }
 
 .social-container {
-	margin: 45px ;
+	margin: 40px ;
 }
 .social-container:hover {
     opacity: 0.7;
